--- a/demo/picture/card.html
+++ b/demo/picture/card.html
@@ -127,40 +127,14 @@
 
 	<script>
 		var list = [
-			{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/1.jpg",
-			},{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/2.jpg",
-			},{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/3.jpg",
-			},{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/4.jpg",
-			},{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/5.jpg",
-			},{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/6.jpg",
-			},{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/7.jpg",
-			},{
-				height: 2000,
-				width: 1333,
-				content: "./imgs/card/8.jpg",
-			}
-			];
+			{content: "./imgs/card/1.jpg"},
+			{content: "./imgs/card/2.jpg"},
+			{content: "./imgs/card/3.jpg"},
+			{content: "./imgs/card/4.jpg"},
+			{content: "./imgs/card/5.jpg"},
+			{content: "./imgs/card/6.jpg"},
+			{content: "./imgs/card/7.jpg"},
+			{content: "./imgs/card/8.jpg"}];
 		
 		var	islider = new iSlider({
 			type: 'pic',
