--- a/demo/picture/picture_with_dots.html
+++ b/demo/picture/picture_with_dots.html
@@ -51,44 +51,15 @@
 	<script src="../public/js/islider.js"></script>
 	<script>
 		var list = [
-			{
-				height: 414,
-				width: 300,
-				content: "./imgs/long/1.jpg",
-			},{
-				height: 414,
-				width: 300,
-				content: "./imgs/long/2.jpg",
-			},{
-			 	height: 414,
-				width: 300,
-			 	content: "./imgs/long/3.jpg",
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/long/4.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/long/5.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/long/6.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/long/7.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/long/8.jpg"
-			},
-			{
-				height: 414,
-				width: 300,
-				content:"./imgs/long/9.jpg"
-			},
+			{content: "./imgs/long/1.jpg"},
+			{content: "./imgs/long/2.jpg"},
+			{content: "./imgs/long/3.jpg"},
+			{content: "./imgs/long/4.jpg"},
+			{content: "./imgs/long/5.jpg"},
+			{content: "./imgs/long/6.jpg"},
+			{content: "./imgs/long/7.jpg"},
+			{content: "./imgs/long/8.jpg"},
+			{content: "./imgs/long/9.jpg"},
 			];
 		
 		var opts = {
