--- a/demo/picture/picture_with_button.html
+++ b/demo/picture/picture_with_button.html
@@ -51,44 +51,15 @@
 	<script src="../public/js/islider.js"></script>
 	<script>
 		var list = [
-			{
-				height: 414,
-				width: 300,
-				content: "./imgs/high/1.jpg",
-			},{
-				height: 414,
-				width: 300,
-				content: "./imgs/high/2.jpg",
-			},{
-			 	height: 414,
-				width: 300,
-			 	content: "./imgs/high/3.jpg",
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/high/4.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/high/5.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/high/6.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/high/7.jpg"
-			},{
-				height: 414,
-				width: 300,
-				content:"./imgs/high/8.jpg"
-			},
-			{
-				height: 414,
-				width: 300,
-				content:"./imgs/high/9.jpg"
-			},
+			{content: "./imgs/high/1.jpg"},
+			{content: "./imgs/high/2.jpg"},
+			{content: "./imgs/high/3.jpg"},
+			{content: "./imgs/high/4.jpg"},
+			{content: "./imgs/high/5.jpg"},
+			{content: "./imgs/high/6.jpg"},
+			{content: "./imgs/high/7.jpg"},
+			{content: "./imgs/high/8.jpg"},
+			{content: "./imgs/high/9.jpg"}
 			];
 				
 		var	islider = new iSlider({
