--- a/demo/dom/default.html
+++ b/demo/dom/default.html
@@ -63,7 +63,7 @@
 	<script type="text/javascript" src="../public/js/islider.js"></script>
 	<script>
 		var list = [{
-			'content' : '<a href="http://www.baidu.com"><div class="content home"><h1>Home</h1><h2>This is home page</h2><p>home is pretty awsome</p><div></a>'
+			'content' : '<a href="http://www.baidu.com"><div class="content home"><h1>Home</h1><h2>This is home page</h2><p>home is pretty awsome</p><div></a><div><input type="text"><input type="checkbox"></div>'
 		},
 		{
 			'content' : '<div class="content page1"><h1>Page1</h1><h2>This is page1</h2><p>page1 is pretty awsome</p><div>'
