fix preload index bug

--- a/demo/dom/demo_with_navigator.html
+++ b/demo/dom/demo_with_navigator.html
@@ -127,6 +127,7 @@
 		    isLooping: true,
 		    isDebug: true,
 		    isAutoplay: false,
+		    fixPage: false,
 		   	onslideend: function(idx){
 		   		bg.style.webkitTransition = 'left .3s ease';
 				bg.style.width = tabs[idx].clientWidth + 'px';
