fix initIndex bug

--- a/demo/picture/default.html
+++ b/demo/picture/default.html
@@ -72,8 +72,7 @@
         data: list,
         dom: document.getElementById("iSlider-wrapper"),
         isLooping: true,
-        animateType: 'default',
-        fixPage: true
+        animateType: 'default'
     });
 
 </script>
