--- a/demo/picture/picture_with_dots.html
+++ b/demo/picture/picture_with_dots.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
-	<link href="../public/css/islider.css" rel="stylesheet">
+	<link href="../public/css/iSlider.css" rel="stylesheet">
 	<style>
 		body {
 			margin: 0;
@@ -48,7 +48,8 @@
 <body>
 	<!-- Outer Canvas 外层画布 -->
 	<div id="iSlider-wrapper"></div>
-	<script src="../public/js/islider.js"></script>
+	<script src="../public/js/iSlider.js"></script>
+	<script src="../public/js/iSlider.plugin.dot.js"></script>
 	<script>
 		var list = [
 			{content: "./imgs/long/1.jpg"},
