--- a/demo/dom/vertical_slide.html
+++ b/demo/dom/vertical_slide.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
-<link href="../public/css/islider.css" rel="stylesheet">
+<link href="../public/css/iSlider.css" rel="stylesheet">
 <style>
 	body {
 	    margin: 0;
@@ -11,7 +11,7 @@
 	    overflow: hidden;
 	}
 
-	#iSlider {
+	#iSlider-wrapper {
 	    position: absolute;
 	    height: 100%;
 	    width: 100%;
@@ -59,8 +59,8 @@
 
 </head>
 <body>
-	<div id="iSlider"></div>
-	<script type="text/javascript" src="../public/js/islider.js"></script>
+	<div id="iSlider-wrapper"></div>
+	<script type="text/javascript" src="../public/js/iSlider.js"></script>
 	<script>
 		var list = [{
 			'content' : '<div class="content home"><h1>Home</h1><h2>This is home page</h2><p>home is pretty awsome</p><div>'
@@ -82,8 +82,7 @@
 		}];
 		var islider = new iSlider({
 		    data: list,
-		    type: 'dom',
-		    dom: document.getElementById("iSlider"),
+		    dom: document.getElementById("iSlider-wrapper"),
 		    duration: 1000,
 		    isVertical: true
 		});
