--- a/demo/picture/card.html
+++ b/demo/picture/card.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
-	<link href="../public/css/islider.css" rel="stylesheet">
+	<link href="../public/css/iSlider.css" rel="stylesheet">
 	<style>
 		body {
 			margin: 0;
@@ -123,7 +123,7 @@
 	</aside>
 	<audio src="./imgs/card/YouGotMe.mp3" autoplay="autoplay" loop="loop" id="autoplay"></audio>
 	<div id="iSlider-arrow"></div>
-	<script src="../public/js/islider.js"></script>
+	<script src="../public/js/iSlider.js"></script>
 
 	<script>
 		var list = [
