--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,94 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <link rel="stylesheet" href="islider.css" />
-    </head>
-    <body>
-    <div id="iSlider"></div>
-    <script src="lib/require.js"></script>
-    </body>
+<head>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
+    <link rel="stylesheet" href="style/iSlider.css" />
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #333;
+            overflow: hidden;
+        }
+
+        /*ul wrapper*/
+        #iSlider-wrapper {
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            position: absolute;
+        }
+
+        #iSlider-wrapper ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        #iSlider-wrapper li {
+            position: absolute;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-pack: center;
+            -webkit-box-align: center;
+            list-style: none;
+        }
+
+        #iSlider-wrapper li img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+    </style>
+</head>
+
+<body>
+<div id="iSlider-wrapper"></div>
+<script src="js/iSlider.js"></script>
+<script src="js/ext/animate.js"></script>
+<script src="js/plugins/dot.js"></script>
+<script src="js/plugins/button.js"></script>
+<script>
+    var list = [];
+    for (var i = 1; i <= 9; i++)
+        list.push({content: './resource/imgs/random/' + i + '.jpg'});
+
+    list.push({content: '<div style="font-size:15em;color:white;">妹</div>'});
+
+    list.push({
+        content: (function () {
+            var dom = document.createElement('div');
+            dom.innerHTML = '夫';
+            dom.style.cssText = 'font-size:15em;color:blue;'
+            return dom;
+        })()
+    });
+
+    var islider = new iSlider({
+        // type: 'pic',
+        data: list,
+        dom: document.getElementById("iSlider-wrapper"),
+        isLooping: true,
+        animateType: 'default',
+        animateTime: 500,
+        isDebug: 1,
+        plugins: ['dot', 'button'],
+        onslide: function () {
+            // console.log(this, arguments)
+        },
+        onslidechange: function () {
+            // console.log(this, arguments, 'change INDEX!!!!!!!');
+            // this.off('slideChange', arguments.callee);
+        }
+    });
+
+    console.log(islider);
+</script>
+</body>
 </html>
