--- a/demo/2.X/default.html
+++ b/demo/2.X/default.html
@@ -1,64 +1,49 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport"
-          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
+          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
     <link href="../public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
             padding: 0;
+            background: #333;
             overflow: hidden;
         }
 
+        /*ul wrapper*/
         #iSlider-wrapper {
-            position: absolute;
             height: 100%;
             width: 100%;
             overflow: hidden;
+            position: absolute;
         }
 
-        .content {
-            padding: 10%;
+        #iSlider-wrapper ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
             height: 100%;
-            width: 100%;
-            -webkit-box-sizing: border-box;
+            overflow: hidden;
         }
 
-        .content h1 {
-            margin: 2em 0;
+        #iSlider-wrapper li {
+            position: absolute;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-pack: center;
+            -webkit-box-align: center;
+            list-style: none;
         }
 
-        .content h2 {
-            margin: 2em 0;
-        }
-
-        .content p {
-            margin: 1em 0;
-        }
-
-        .page1 {
-            background-color: #F5A8A8;
-            color: #FFF;
-        }
-
-        .page2 {
-            background-color: #90FFB7;
-        }
-
-        .page3 {
-            background-color: #90ABFF;
-            color: #FFF;
-        }
-
-        .page4 {
-            background-color: #FCFF90;
-        }
-
-        .page5 {
-            background-color: #E390FF;
-            color: #FFF;
+        #iSlider-wrapper li img {
+            max-width: 100%;
+            max-height: 100%;
         }
     </style>
 
@@ -66,5 +51,53 @@
 <body>
 <div id="iSlider-wrapper"></div>
 <script type="text/javascript" src="../public/js/iSlider.js"></script>
+<div id="hidden-space" style="display:none"><p style="font-size:3em;text-align: center;color:#F5A8A8">A node in dom
+    tree.</p></div>
+<script>
+    var list = [];
+
+    list.push({content: './imgs/0.jpg'});
+
+    list.push({content: '<div style="font-size:4em;color:white;text-align: center">HTML String</div>'});
+
+    list.push({
+        content: (function () {
+            var dom = document.createElement('div');
+            dom.innerHTML = 'Element';
+            dom.style.cssText = 'font-size:3em;color:rgb(230, 230, 63);';
+            return dom;
+        })()
+    });
+
+    list.push({
+        content: (function () {
+            var frag = document.createDocumentFragment();
+            var dom = document.createElement('div');
+            dom.innerHTML = 'Fragment';
+            dom.style.cssText = 'font-size:3em;color:rgb(230, 63, 230);';
+            frag.appendChild(dom);
+            return frag;
+        })()
+    });
+
+    list.push({
+        content: document.querySelector('#hidden-space > p')
+    });
+
+    var S = new iSlider({
+        dom: document.getElementById('iSlider-wrapper'),
+        data: list,
+        isLooping: 1,
+        isOverspread: 1,
+        animateTime: 800, // ms
+        onslidechanged: function (index) {
+            console.log('change to ' + index);
+        }
+    });
+
+    S.on('slideRestored', function (index) {
+        console.log('no change, restore to ' + index);
+    });
+</script>
 </body>
 </html>
