[new] add hold unhold lock unlock methods [new] slideTo, slideNext, slidePrev support the second paramter [bug fix] getLink target element recognition in no-pic mode

--- a/demo/2.X/default.html
+++ b/demo/2.X/default.html
@@ -51,8 +51,9 @@
 <body>
 <div id="iSlider-wrapper"></div>
 <script type="text/javascript" src="../public/js/iSlider.js"></script>
-<div id="hidden-space" style="display:none"><p style="font-size:3em;text-align: center;color:#F5A8A8">A node in dom
-    tree.</p></div>
+<div id="hidden-space" style="display:none">
+    <p style="font-size:3em;text-align: center;color:#04f512">A node in dom tree.</p>
+</div>
 <script>
     var list = [];
 
