[NEW] add switch animate effect "fade"

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
         // isVertical: true,
         isLooping: 1,
         isOverspread: 1,
-        animateType: 'card',
+        animateType: 'fade',
         animateTime: 500,
         fixPage: 1,
         isDebug: 1,
