Add timer clear in destroy

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,8 @@
         isDebug: 1,
         // isDebug: 0,
         // isLoading: true,
+        // isAutoplay: true,
+        // duration: 5000,
         plugins: ['dot', 'button', ['zoompic', {zoomFactor: 2}]],
         onslide: function () {
             console.debug(arguments)
