--- a/demo/2.X_more-animation.html
+++ b/demo/2.X_more-animation.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
-    <title>Default 2.0</title>
-    <link href="../public/css/iSlider.css" rel="stylesheet">
+    <title>iSlider more animation</title>
+    <link href="public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -54,56 +54,40 @@
 <div id="hidden-space" style="display:none">
     <p style="font-size:3em;text-align: center;color:#04f512">A node in dom tree.</p>
 </div>
-<script type="text/javascript" src="../public/js/iSlider.js"></script>
-<script>
+<script type="text/javascript" src="public/js/iSlider.js"></script>
+<script type="text/javascript" src="public/js/iSlider.animate.js"></script>
+<script id="show-code">
     var list = [
         // picture
         {
-            content: './imgs/0.jpg'
+            content: './imgs/6.jpg'
         },
-        // HTML String
+        // picture
         {
-            content: '<div style="font-size:4em;color:white;text-align: center">HTML String</div>'
+            content: './imgs/7.jpg'
         },
-        // element
+        // picture
         {
-            content: (function () {
-                var dom = document.createElement('div');
-                dom.innerHTML = 'Element';
-                dom.style.cssText = 'font-size:3em;color:rgb(230, 230, 63);';
-                return dom;
-            })()
+            content: './imgs/11.jpg'
         },
-        // fragment
+        // picture
         {
-            content: (function () {
-                var frag = document.createDocumentFragment();
-                var dom = document.createElement('div');
-                dom.innerHTML = 'Fragment';
-                dom.style.cssText = 'font-size:3em;color:rgb(230, 63, 230);';
-                frag.appendChild(dom);
-                return frag;
-            })()
+            content: './imgs/9.jpg'
         },
-        // dom
+        // picture
         {
-            content: document.querySelector('#hidden-space > p')
+            content: './imgs/10.jpg'
         }
     ];
 
     var S = new iSlider({
         dom: document.getElementById('iSlider-wrapper'),
         data: list,
+        isVertical: true,
         isLooping: 1,
         isOverspread: 1,
-        animateTime: 800, // ms
-        onslidechanged: function (index) {
-            console.log('[slideChanged] change to ' + index);
-        }
-    });
-
-    S.on('slideRestored', function (index) {
-        console.log('[slideRestored] no change, restore to ' + index);
+        animateTime: 800,
+        animateType: 'flip'
     });
 </script>
 </body>
