--- a/demo/2.X_more-default.html
+++ b/demo/2.X_more-default.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/>
-    <title>iSlider with plugins dot and button</title>
-    <link href="../public/css/iSlider.css" rel="stylesheet">
+    <title>iSlider more animation</title>
+    <link href="public/css/iSlider.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
             padding: 0;
             background: #333;
             overflow: hidden;
+            font-size: 12px;
         }
 
         /*ul wrapper*/
@@ -47,23 +48,9 @@
             max-height: 100%;
         }
 
-        .islider-btn-outer {
-            background-color: rgba(0, 0, 0, .5);
-            border-radius: 99px;
-        }
-
-        .islider-btn-inner {
-            height: 30%;
-            width: 30%;
-            margin-top: 34%;
-        }
-
-        .islider-btn-outer.left .islider-btn-inner {
-            margin-left: 40%;
-        }
-
-        .islider-btn-outer.right .islider-btn-inner {
-            margin-right: 40%;
+        iframe {
+            height: 100%;
+            width: 100%;
         }
     </style>
 
@@ -73,14 +60,13 @@
 <div id="hidden-space" style="display:none">
     <p style="font-size:3em;text-align: center;color:#04f512">A node in dom tree.</p>
 </div>
-<script type="text/javascript" src="../public/js/iSlider.js"></script>
-<script type="text/javascript" src="../public/js/iSlider.plugin.dot.js"></script>
-<script type="text/javascript" src="../public/js/iSlider.plugin.button.js"></script>
-<script>
+<script type="text/javascript" src="public/js/iSlider.js"></script>
+<script type="text/javascript" src="public/js/iSlider.animate.js"></script>
+<script id="show-code">
     var list = [
         // picture
         {
-            content: './imgs/0.jpg'
+            content: './imgs/6.jpg'
         },
         // HTML String
         {
@@ -99,6 +85,7 @@
         {
             content: (function () {
                 var frag = document.createDocumentFragment();
+                var img = new Image()
                 var dom = document.createElement('div');
                 dom.innerHTML = 'Fragment';
                 dom.style.cssText = 'font-size:3em;color:rgb(230, 63, 230);';
@@ -109,7 +96,11 @@
         // dom
         {
             content: document.querySelector('#hidden-space > p')
-        }
+        },
+        // iframe
+        // {
+        //     content: '<iframe src="http://mobile.baidu.com/"></iframe>'
+        // }
     ];
 
     var S = new iSlider({
@@ -117,18 +108,8 @@
         data: list,
         isLooping: 1,
         isOverspread: 1,
-        animateTime: 800, // ms
-        plugins: ['button']
+        animateTime: 800
     });
-
-    S.regPlugin('dot');
-
-    S.regPlugin('others', function () {
-        console.debug('Init Plugin "others"', arguments)
-        this.on('slideChange', function () {
-            alert('the plugin "others" on "slideChange"');
-        });
-    }, 1, 2, 3);
 </script>
 </body>
 </html>
